--- a/www/addasset.html
+++ b/www/addasset.html
@@ -284,7 +284,12 @@
                     <input name="Location" id="Location" type="text" class="txt_box9" placeholder="Location">
                 </div>
                 <div class="name">
-                    <input name="MethodOfDepreciation" id="MethodOfDepreciation" type="text" class="txt_box9" placeholder="Method of Depreciation">
+                    <select class="dropdown_box8" name="MethodOfDepreciation" id="MethodOfDepreciation">
+                        <option value="">Method of Depreciation </option>
+                        <option value="WDV">WDV</option>
+                        <option value="SLM">SLM</option>
+                        <option value="Other">Other</option>
+                    </select>
                 </div>
 
                 <div class="name">
