--- a/www/addasset.html
+++ b/www/addasset.html
@@ -189,7 +189,7 @@
                         AssetPurchaseDate: $('#datepicker').val(),
                         AssetSerialNumber: $('#slnumb').val(),
                         AssetPurchaseValue: Number($('#purchasevalue').val()),
-                        AssetImageData: "",
+                        AssetImageData: $('#assetImage').attr("src"),
                         MethodOfDepreciation: $('#MethodOfDepreciation').val(),
                         DepreciationRate: $('#DepreciationRate').val(),
                         Location: $('#Location').val(),
