--- a/www/addasset.html
+++ b/www/addasset.html
@@ -34,6 +34,8 @@
             {
                 quality: 50,
                 encodingType: Camera.EncodingType.JPEG,
+		targetWidth:300,
+		targetHeight:180,
                 destinationType: Camera.DestinationType.DATA_URL
             });
         }
