--- a/www/editasset.html
+++ b/www/editasset.html
@@ -32,6 +32,8 @@
             {
                 quality: 50,
                 encodingType: Camera.EncodingType.JPEG,
+		targetWidth:300,
+		targetHeight:180,
                 destinationType: Camera.DestinationType.DATA_URL
             });
         }
