--- a/www/assetsDetailsSearch.html
+++ b/www/assetsDetailsSearch.html
@@ -141,7 +141,7 @@
         </div>
         <!-- menu ends here -->
         <div>
-            <img id="assetImg" alt="Asset Image" style="display:none" src="" />
+            <img id="assetImg" alt="Asset Image" src="" />
         </div>
         <!-- content box starts from here -->
         <div id="assetsList">
