--- a/www/assetsDetails.html
+++ b/www/assetsDetails.html
@@ -116,7 +116,7 @@
         </div>
         <!-- menu ends here -->
         <div>
-            <img id="assetImg" alt="Asset Image" style="display:none" src="" />
+            <img id="assetImg" alt="Asset Image"  src="" />
         </div>
         <!-- content box starts from here -->
         <div id="assetsList">
