--- a/www/editasset.html
+++ b/www/editasset.html
@@ -202,6 +202,7 @@
                         AssetPurchaseDate: $('#datepicker').val(),
                         AssetSerialNumber: $('#slnumb').val(),
                         AssetPurchaseValue: Number($('#purchasevalue').val()),
+			AssetImageData: $('#assetImage').attr("src"),
                         MethodOfDepreciation: $('#MethodOfDepreciation').val(),
                         DepreciationRate: $('#DepreciationRate').val(),
                         Location: $('#Location').val(),
